# sworn

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: pages.yml
.ralph/: @fix_plan.md
ai/: design-progress.md  design-research.md  memory.md  progress.md
contracts/: .env.example  deploy-commitreveal-galileo.sh  deploy-dispute-galileo.sh  deploy-galileo.sh  deploy-inft-galileo.sh  deploy-revocation-galileo.sh  foundry.toml
contracts/deployments/: 16602-commitreveal.json  16602-dispute.json  16602-inft.json  16602-revocation.json  16602.json
contracts/script/: Deploy.s.sol  DeployCommitReveal.s.sol  DeployDispute.s.sol  DeployInft.s.sol  DeployRevocation.s.sol
contracts/src/: CommitReveal.sol  ReceiptDispute.sol  ReceiptRegistry.sol  RevocationRegistry.sol  SwornReceiptInft.sol
contracts/test/: CommitReveal.t.sol  ReceiptDispute.t.sol  ReceiptRegistry.t.sol  RevocationRegistry.t.sol  SwornReceiptInft.t.sol
demo-chatbot/: next.config.mjs  package.json
docs/: PRD.md
extension/: README.md  content.css  content.js  manifest.json  options.html  popup.css  popup.html  popup.js
scripts/: issue-one.sh  list-providers.sh
sdk-py/: README.md  pyproject.toml
sdk-py/src/sworn_verify/: __init__.py  verifier.py
sdk-py/src/sworn_verify.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk-py/tests/: test_verifier.py
sdk-ts/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
verifier-web/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
(+124 files in other folders)
